UI:1260865:TPR-1979 Bug Fix(out of stock PDP button alignment)

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -46496,6 +46496,9 @@ float: right;
     padding-bottom: 10px;
     display: block;
 }
+.product-info .product-detail .Cta .addtocart-component span#outOfStockId.out_of_stock {
+	left: 0;
+}
 .product-info .product-detail .Cta .addtocart-component span#outOfStockId {
 	top: 0px;
 	}
